Add LCV folder to _Imports.razor

--- a/MemoryMosaic/_Imports.razor
+++ b/MemoryMosaic/_Imports.razor
@@ -11,4 +11,5 @@
 @using MemoryMosaic.Shared.Buttons
 @using MemoryMosaic.Shared.Import
 @using MemoryMosaic.Shared.Input
+@using MemoryMosaic.Shared.LibraryContentViewer
 @using MemoryMosaic.Shared.Modal
