Move LCV's stylesheet to Styles/Components/LibraryContentViewer

--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -5,3 +5,4 @@ Items can be selected, and depending on the page, different options may be appli
 *@
 @inherits Component
 
+<link href="css/Components/LibraryContentViewer/LibraryContentViewer.css" rel="stylesheet"/>
