Checkbox now has "checked" or "unchecked" CSS class applied to it

--- a/MemoryMosaic/Shared/Input/Checkbox.razor
+++ b/MemoryMosaic/Shared/Input/Checkbox.razor
@@ -2,7 +2,7 @@
 
 <link href="css/Components/Input/Checkbox.css" rel="stylesheet"/>
 
-<div @ref="@input" class="checkbox" @onclick="@OnClick">
+<div @ref="@input" class="checkbox @(Input ? "checked" : "unchecked")" @onclick="@OnClick">
 	<MaterialIcon Icon="@(Input ? "check_box" : "check_box_outline_blank")" IconStyle="@($"color: {(Input ? "#0080ff" : "white")}")"/>
 	@if (!String.IsNullOrWhiteSpace(Label))
 	{
