--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,12 +3,8 @@
 
 <title>Test - MM</title>
 @{
-    <button style="margin-left: 50%; margin-top: 10%; color: black;" @onclick="@(Yes)">click me</button>
+    <div style="margin-left: 50%; margin-top: 10%">
+        <LibraryContentViewer/>
+    </div>
 }
 
-@code {
-
-    private static void Yes()
-    {
-    }
-}
