--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -10,28 +10,60 @@ Items can be selected, and depending on the page, different options may be appli
 
 <div id="top-load-div"></div>
 <main>
-	@foreach (var group in Content.GroupBy(row => row.dateTaken?.Date))
+	@{
+		Func<MediaRow, dynamic?> sortFunction = mode switch 
+		{
+			LCVMode.None => row => row.dateTaken?.Date,
+			LCVMode.Day => row => row.dateTaken?.Date,
+			LCVMode.Month => row => new {row.dateTaken?.Month, row.dateTaken?.Year},
+			LCVMode.Year => row => row.dateTaken?.Year,
+			_ => throw new ArgumentOutOfRangeException()
+		};
+
+		string dateFormat = mode switch
+		{
+			LCVMode.None => "",
+			LCVMode.Day => "ddd, MMM d, yyyy",
+			LCVMode.Month => "MMM yyyy",
+			LCVMode.Year => "yyyy",
+			_ => throw new ArgumentOutOfRangeException()
+		};
+	}
+	
+	@if (mode == LCVMode.None)
 	{
 		<div>
-			<span>@(group.First().dateTaken == null ? "No Date Taken" : group.First().dateTaken!.Value.ToString("ddd, MMM d, yyyy"))</span>
-			<div>
-				@foreach (MediaRow item in group)
-				{
-					<Thumbnail Item="@item"/>
-				}
-			</div>
+			@foreach (MediaRow item in Content)
+			{
+				<Thumbnail Item="@item"/>
+			}
 		</div>
+	}
+	else
+	{
+		foreach (var group in Content.GroupBy(sortFunction))
+		{
+			<div>
+				<span>@(group.First().dateTaken == null ? "No Date Taken" : group.First().dateTaken!.Value.ToString(dateFormat))</span>
+				<div>
+					@foreach (MediaRow item in group)
+					{
+						<Thumbnail Item="@item"/>
+					}
+				</div>
+			</div>
+		}
 	}
 </main>
 <div id="bottom-load-div"></div>
 
 @code {
-
 	private List<MediaRow> Content { get; set; } = null!;
+
+	private LCVMode mode = LCVMode.None;
 
 	protected override async Task OnInitializedAsync()
 	{
 		Content = C.LoadEntireMediaTable();
 	}
-
 }
