--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -10,26 +10,6 @@ Items can be selected, and depending on the page, different options may be appli
 
 <div id="top-load-div"></div>
 <main>
-	@{
-		Func<MediaRow, dynamic?> sortFunction = mode switch 
-		{
-			LCVMode.None => row => row.dateTaken?.Date,
-			LCVMode.Day => row => row.dateTaken?.Date,
-			LCVMode.Month => row => new {row.dateTaken?.Month, row.dateTaken?.Year},
-			LCVMode.Year => row => row.dateTaken?.Year,
-			_ => throw new ArgumentOutOfRangeException()
-		};
-
-		string dateFormat = mode switch
-		{
-			LCVMode.None => "",
-			LCVMode.Day => "ddd, MMM d, yyyy",
-			LCVMode.Month => "MMM yyyy",
-			LCVMode.Year => "yyyy",
-			_ => throw new ArgumentOutOfRangeException()
-		};
-	}
-	
 	@if (mode == LCVMode.None)
 	{
 		<div>
@@ -41,10 +21,10 @@ Items can be selected, and depending on the page, different options may be appli
 	}
 	else
 	{
-		foreach (var group in Content.GroupBy(sortFunction))
+		foreach (var group in Content.GroupBy(SortFunction))
 		{
 			<div>
-				<span>@(group.First().dateTaken == null ? "No Date Taken" : group.First().dateTaken!.Value.ToString(dateFormat))</span>
+				<span>@(group.First().dateTaken == null ? "No Date Taken" : group.First().dateTaken!.Value.ToString(DateFormat))</span>
 				<div>
 					@foreach (MediaRow item in group)
 					{
@@ -61,6 +41,24 @@ Items can be selected, and depending on the page, different options may be appli
 	private List<MediaRow> Content { get; set; } = null!;
 
 	private LCVMode mode = LCVMode.None;
+	
+	private Func<MediaRow, dynamic?> SortFunction => mode switch 
+	{
+		LCVMode.None => row => row.dateTaken?.Date,
+		LCVMode.Day => row => row.dateTaken?.Date,
+		LCVMode.Month => row => new {row.dateTaken?.Month, row.dateTaken?.Year},
+		LCVMode.Year => row => row.dateTaken?.Year,
+		_ => throw new ArgumentOutOfRangeException()
+	};
+	
+	private string DateFormat => mode switch
+	{
+		LCVMode.None => "",
+		LCVMode.Day => "ddd, MMM d, yyyy",
+		LCVMode.Month => "MMM yyyy",
+		LCVMode.Year => "yyyy",
+		_ => throw new ArgumentOutOfRangeException()
+	};
 
 	protected override async Task OnInitializedAsync()
 	{
