--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/LibraryContentViewer.scss
@@ -4,7 +4,28 @@ main {
 	@include flex-main(row, 60px);
 	flex-wrap: wrap;
 
-	> div {
+	> .ungrouped { //https://css-tricks.com/adaptive-photo-layout-with-flexbox/
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+
+		> .thumbnail {
+			height: 19vh; //This used to be 20, and started at 40. 20 was sometimes causing weird gaps below wide items like video thumbnails.
+			flex-grow: 1;
+			margin: 2px;
+
+			> img {
+				max-height: 100%;
+				min-width: 100%;
+				object-fit: cover;
+				vertical-align: bottom;
+			}
+
+			> .img:last-child { flex-grow: 10; }
+		}
+	}
+
+	> .group {
 		@include flex-col;
 		margin-right: 25px;
 
@@ -17,6 +38,10 @@ main {
 			@include flex-row;
 			flex-wrap: wrap;
 			margin-bottom: 20px;
+
+			> .thumbnail {
+				> img { height: 200px; }
+			}
 		}
 	}
 }
