--- a/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer/Thumbnail.scss
@@ -1,7 +1,6 @@
 .thumbnail {
 	position: relative; /* https://stackoverflow.com/a/12365963 */
 	cursor: pointer;
-	margin-right: 4px;
 
 	> .star-icon {
 		position: absolute;
@@ -23,4 +22,26 @@
 	}
 
 	&:hover > .checkbox { opacity: 1; }
+}
+
+.ungrouped > .thumbnail {
+	height: 19vh; //This used to be 20, and started at 40. 20 was sometimes causing weird gaps below wide items like video thumbnails.
+	flex-grow: 1;
+	margin: 2px;
+
+	> img {
+		max-height: 100%;
+		min-width: 100%;
+		object-fit: cover;
+		vertical-align: bottom;
+	}
+
+	> .img:last-child { flex-grow: 10; }
+}
+
+.group > div > .thumbnail {
+	margin-right: 2px;
+	margin-left: 2px;
+
+	> img { height: 200px; }
 }
