--- a/MemoryMosaic/Pages/_Host.cshtml
+++ b/MemoryMosaic/Pages/_Host.cshtml
@@ -16,8 +16,12 @@
     @* Caching frequently used CSS files here. *@
     <link href="css/Components/NavMenu.css" rel="stylesheet"/>
     <link href="css/Components/ViewItem.css" rel="stylesheet"/>
+    
     <link href="css/Components/LibraryContentViewer/LibraryContentViewer.css" rel="stylesheet"/>
+    <link href="css/Components/LibraryContentViewer/Thumbnail.css" rel="stylesheet"/>
+    
     <link href="css/Components/Input/TextInput.css" rel="stylesheet"/>
+    <link href="css/Components/Input/Checkbox.css" rel="stylesheet"/>
 
     <link href="css/Components/Buttons/DropdownButton.css" rel="stylesheet"/>
     <link href="css/Components/Buttons/IconButton.css" rel="stylesheet"/>
