Swap actions for zooming in/out hotkeys

--- a/MemoryMosaic/Pages/Test.razor
+++ b/MemoryMosaic/Pages/Test.razor
@@ -3,4 +3,4 @@
 
 <title>Test - MM</title>
 
-<LibraryContentViewer DefaultViewMode="ViewMode.Month"/>
+<LibraryContentViewer DefaultViewMode="ViewMode.Day"/>
