--- a/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/LibraryContentViewer.razor
@@ -5,7 +5,7 @@ Items can be selected, and depending on the page, different options may be appli
 *@
 @inherits Component
 
-<KeyboardShortcuts CtrlShiftMinus="@(() => ViewMode--)" CtrlShiftPlus="@(() => ViewMode++)"/>
+<KeyboardShortcuts CtrlShiftMinus="@(() => ViewMode++)" CtrlShiftPlus="@(() => ViewMode--)"/>
 
 <div id="top-load-div"></div>
 <main>
