--- a/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer/Thumbnail.razor
@@ -11,6 +11,9 @@
 	
 	[Parameter, EditorRequired]
 	public required LibraryContentViewer Parent { get; set; }
+	
+	[Parameter, EditorRequired]
+	public required Action Rerender { get; set; }
 }
 
 @functions {
@@ -20,5 +23,7 @@
 			Parent.SelectedItems.Remove(Item.uuid);
 		else
 			Parent.SelectedItems.Add(Item.uuid);
+		
+		Rerender.Invoke();
 	}
 }
